# drysense-2025_2026

./: .gitignore  Plotting_drysense.ipynb  README.md  main.py  pyproject.toml
.mypy_cache/: .gitignore  missing_stubs
.mypy_cache/3.11/: __future__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _io.data.json  _io.meta.json  _operator.data.json  _operator.meta.json  _pickle.data.json  _pickle.meta.json  _queue.meta.json  _sitebuiltins.meta.json  _socket.data.json  _socket.meta.json  _ssl.data.json  _ssl.meta.json  _struct.data.json  _struct.meta.json  _thread.data.json  _thread.meta.json  _warnings.data.json  (+121 more)
.mypy_cache/3.12/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.meta.json  (+237 more)
functions/: m_data.py
(+2116 files in other folders)
